added checkout page

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -2,3 +2,21 @@ img{
     height: 100vh;
 
 }
+@media screen and (max-width: 912px) {
+    img{
+        width: auto;
+        max-height: 65vh;  
+    }
+}
+@media screen and (max-width: 768px) {
+    img{
+        width: auto;
+        max-height: 60vh;  
+    }
+}
+@media screen and (max-width: 468px) {
+    img{
+        width: auto;
+        max-height: 50vh;  
+    }
+}
