--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,3 +3,21 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
 }
+
+@media screen and (max-width: 912px) {
+    .item-container{
+        grid-template-columns: repeat(2, 1fr);  
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .item-container{
+        grid-template-columns: repeat(2, 1fr);  
+    }
+}
+
+@media screen and (max-width: 468px) {
+    .item-container{
+        grid-template-columns: repeat(1, 1fr);  
+    }
+}
